--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^0.7.5",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1"
   }
