--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.5",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1"
   }
