--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.5",
+    "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-sass": "^0.7.3",
