--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jade": "^0.12.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1"
   }
